fix height of elements on mobile CSS

--- a/mStyle.css
+++ b/mStyle.css
@@ -2,3 +2,7 @@
   width: auto;
   margin: auto;
 }
+
+.content {
+  height: 1000px;
+}
